// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ExpenseService - Characterization Tests > calculateOutstandingBalance > should calculate balance with custom split percentages 1`] = `
{
  "bryanOwes": 0,
  "hweiYeenOwes": 50,
}
`;

exports[`ExpenseService - Characterization Tests > calculateOutstandingBalance > should calculate balance with default 70/30 split when Bryan paid 1`] = `
{
  "bryanOwes": 0,
  "hweiYeenOwes": 50,
}
`;

exports[`ExpenseService - Characterization Tests > calculateOutstandingBalance > should calculate balance with default 70/30 split when HweiYeen paid 1`] = `
{
  "bryanOwes": 50,
  "hweiYeenOwes": 0,
}
`;

exports[`ExpenseService - Characterization Tests > calculateOutstandingBalance > should calculate balance with multiple mixed transactions 1`] = `
{
  "bryanOwes": 0,
  "hweiYeenOwes": 60,
}
`;

exports[`ExpenseService - Characterization Tests > calculateOutstandingBalance > should return zero balance when no unsettled transactions 1`] = `
{
  "bryanOwes": 0,
  "hweiYeenOwes": 0,
}
`;

exports[`ExpenseService - Characterization Tests > calculateOutstandingBalance > should return zero balance when no users found 1`] = `
{
  "bryanOwes": 0,
  "hweiYeenOwes": 0,
}
`;

exports[`ExpenseService - Characterization Tests > calculateTransactionOwed > should calculate owed amounts with custom 50/50 split when Bryan paid 1`] = `
{
  "bryanOwes": 0,
  "hweiYeenOwes": 50,
}
`;

exports[`ExpenseService - Characterization Tests > calculateTransactionOwed > should calculate owed amounts with custom 80/20 split when HweiYeen paid 1`] = `
{
  "bryanOwes": 120.4,
  "hweiYeenOwes": 0,
}
`;

exports[`ExpenseService - Characterization Tests > calculateTransactionOwed > should calculate owed amounts with default 70/30 split when Bryan paid 1`] = `
{
  "bryanOwes": 0,
  "hweiYeenOwes": 50,
}
`;

exports[`ExpenseService - Characterization Tests > calculateTransactionOwed > should calculate owed amounts with default 70/30 split when HweiYeen paid 1`] = `
{
  "bryanOwes": 50,
  "hweiYeenOwes": 0,
}
`;

exports[`ExpenseService - Characterization Tests > calculateTransactionOwed > should handle decimal amounts 1`] = `
{
  "bryanOwes": 86.41499999999999,
  "hweiYeenOwes": 0,
}
`;

exports[`ExpenseService - Characterization Tests > calculateTransactionOwed > should handle zero amount 1`] = `
{
  "bryanOwes": 0,
  "hweiYeenOwes": 0,
}
`;

exports[`ExpenseService - Characterization Tests > getOutstandingBalanceMessage > should format decimal amounts correctly 1`] = `
"💰 **Outstanding (amount owed):**
Bryan owes Hwei Yeen SGD $61.73
"
`;

exports[`ExpenseService - Characterization Tests > getOutstandingBalanceMessage > should return message when Bryan owes HweiYeen 1`] = `
"💰 **Outstanding (amount owed):**
Bryan owes Hwei Yeen SGD $50.00
"
`;

exports[`ExpenseService - Characterization Tests > getOutstandingBalanceMessage > should return message when HweiYeen owes Bryan 1`] = `
"💰 **Outstanding (amount owed):**
Hwei Yeen owes Bryan SGD $50.00
"
`;

exports[`ExpenseService - Characterization Tests > getOutstandingBalanceMessage > should return message when both owe each other 1`] = `
"💰 **Outstanding (amount owed):**
Bryan owes Hwei Yeen SGD $10.00
"
`;

exports[`ExpenseService - Characterization Tests > getOutstandingBalanceMessage > should return settled message when balance is zero 1`] = `"✅ All expenses are settled! No outstanding balance."`;
